--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
           </div>
         </div>
       </div>
+      <div class="button-container">
+        <button id="button">Avvia slider</button>
+        <button id="button-2">Ferma slider</button>
+      </div>
     </div>
 
     <script src="js/script.js"></script>
